<resources>
    <string name="letran">LETRAN</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="TODO">TODO</string>
    <string name="grade_and_section">GRADE AND SECTION</string>
    <string name="id_number">ID NUMBER</string>
    <string name="strand">STRAND</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Navigation Drawer</string>
    <string name="open">Open Navigation</string>
    <string name="close">Close Navigation</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="forward"><![CDATA[>]]></string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="feb_2021">Feb 2021</string>
    <string name="grades">GRADES</string>
    <string name="subject_1">SUBJECT 1</string>
    <string name="subject_2">SUBJECT 2</string>
    <string name="subject_3">SUBJECT 3</string>
    <string name="subject_4">SUBJECT 4</string>
    <string name="subject_5">SUBJECT 5</string>
    <string name="subject_6">SUBJECT 6</string>
    <string name="subject_7">SUBJECT 7</string>
    <string name="subject_8">SUBJECT 8</string>
    <string name="subject_9">SUBJECT 9</string>
    <string name="subject_10">SUBJECT 10</string>
    <string name="schedule">SCHEDULE</string>
    <string name="offices_of_the_department">OFFICES OF THE DEPARTMENT</string>
    <string name="open_link">Open Link</string>
    <string name="website">WEBSITE</string>
    <string name="youtube">YOUTUBE</string>
    <string name="facebook">FACEBOOK</string>
    <string name="socials">SOCIALS</string>
    <string name="san_vicente_liem_de_la_paz">SAN VICENTE LIEM DE LA PAZ</string>
    <string name="calendar">Calendar</string>
    <string name="gradess">Grades</string>
    <string name="logout">Logout</string>
    <string name="offices">Offices</string>
    <string name="profile">Profile</string>
    <string name="schedules">Schedule</string>
    <string name="socialss">Socials</string>
    <string name="san_vicente">San Vicente</string>
    <string name="offices_of_the_departments">OFFICES OF THE DEPARTMENT</string>
    <string name="vice_president_for_academics">Vice President for Academics</string>
    <string name="remi">REMI</string>
    <string name="vice_president_for_administration">Vice President for Administration</string>
    <string name="rectors_office">Rectors Office</string>
    <string name="faculty_room_basic_education_and_college">Faculty Room - Basic Education and College</string>
    <string name="program_head">Program Head</string>
    <string name="finance">Finance</string>
    <string name="scholarship_and_research">Scholarship and Research</string>
    <string name="computer_laboratory">Computer Laboratory</string>
    <string name="guidance_office_and_clinic">Guidance Office and Clinic</string>
    <string name="academic_office">Academic Office</string>
    <string name="calendar_of_events">Calendar of Events</string>
    <string name="calendar_event_1">Calendar Event 1</string>
    <string name="calendar_event_2">Calendar Event 2</string>
    <string name="calendar_event_3">Calendar Event 3</string>
    <string name="calendar_event_4">Calendar Event 4</string>
    <string name="calendar_event_5">Calendar Event 5</string>
    <string name="calendar_event_6">Calendar Event 6</string>
    <string name="button">Button</string>
    <string name="add_reminders_for_you">Add Reminders for you</string>
</resources>