<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgp"
    android:orientation="vertical"
    tools:context=".ScheduleFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/letran"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_1"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_2"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_3"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_4"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_5"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_6"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_7"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_8"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_9"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_10"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

</LinearLayout>