<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgl"
    android:orientation="vertical"
    tools:context=".ScheduleFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/offices_of_the_departments"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/letran"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vice_president_for_academics"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/remi"
        android:textAlignment="center"
        android:textColor="#3E2723"
        android:textSize="15sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vice_president_for_administration"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rectors_office"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faculty_room_basic_education_and_college"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/program_head"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scholarship_and_research"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finance"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guidance_office_and_clinic"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/computer_laboratory"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/academic_office"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

</LinearLayout>