<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgl"
    android:orientation="vertical"
    tools:context=".CalendarFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendar_of_events"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/letran"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendar_event_1"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendar_event_2"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendar_event_3"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendar_event_4"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendar_event_5"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/calendar_event_6"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/addEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_reminders_for_you"
        android:textColor="#263238"
        app:backgroundTint="#FFFFFF"
        tools:ignore="VisualLintButtonSize" />


</LinearLayout>