<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bgl"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/logom"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/letran"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/letran"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="#002145"
        tools:ignore="TextFields,VisualLintTextFieldSize,TextContrastCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="#002145"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/login"
        app:backgroundTint="#002145"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/gfl"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/gfl"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />

</LinearLayout>