<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgl"
    tools:context=".SocialsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/socials"
        android:textAlignment="center"
        android:textColor="@color/letran"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="79dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="167dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="466dp"
        android:src="@drawable/fb"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />

    <Button
        android:id="@+id/facebookButton"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="265dp"
        android:layout_marginEnd="118dp"
        android:text="@string/facebook"
        android:textStyle="bold"
        android:textColor="#263238"
        app:backgroundTint="#00000000"
        tools:ignore="OnClick,UsingOnClickInXml,VisualLintButtonSize"
        android:onClick="https://www.facebook.com/letrancollegedepartment"/>


    <ImageView
        android:layout_width="79dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="167dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="330dp"
        android:src="@drawable/yt"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/youtubeButton"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="121dp"
        android:text="@string/youtube"
        android:textStyle="bold"
        android:textColor="#263238"
        app:backgroundTint="#00000000"
        android:onClick="https://www.youtube.com/@LM1947Gofurther"
        tools:ignore="DuplicateIds,OnClick,UsingOnClickInXml,VisualLintButtonSize" />

    <ImageView
        android:layout_width="79dp"
        android:layout_height="76dp"
        android:layout_alignTop="@+id/websiteButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="171dp"
        android:layout_marginTop="-76dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="TODO"
        android:src="@drawable/br"
        tools:ignore="ContentDescription,HardcodedText" />

    <Button
        android:id="@+id/websiteButton"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="120dp"
        android:text="@string/website"
        android:textStyle="bold"
        android:textColor="#263238"
        app:backgroundTint="#00000000"
        android:onClick="https://www.letran-manaoag.edu.ph/"
        tools:ignore="DuplicateIds,OnClick,UsingOnClickInXml,VisualLintButtonSize" />


</RelativeLayout>